Init Transaction Verify

--- a/lib/locales/fa.yml
+++ b/lib/locales/fa.yml
@@ -3,3 +3,6 @@ fa:
     nobitex: " شما درحال پرداخت کریپتویی از طریق درگاه پرداخت نوبیتکس می‌باشید, توجه داشته باشید که شما میتوانید از دو روش تتر(USDT-TRC20) و بیت کوین(BTC-lightcoin) استفاده کنید"
     zarinpal: "شما در حال پراخت با درگاه زرین پال می‌باشید"
     mellat: "شما در حال پرداخت با درگاه پرداخت مستقیم بانک ملت می‌باشید"
+    zibal: "شما در حال پرداخت با درگاه زیبال می‌باشید"
+    bsc-bitcoin: "شما در حال پرداخت پرداخت کریپتویی از طریق بایننس می‌باشید"
+    
