--- a/lib/locales/fa.yml
+++ b/lib/locales/fa.yml
@@ -1,4 +1,10 @@
 fa:
+  bank_names:
+    nobitex: "نوبیتکس"
+    mellat: "بانک ملت"
+    zarinpal: "زرینپال"
+    zibal: "زیبال"
+    binance: "بایننس"
   bank_list:
     nobitex: " شما درحال پرداخت کریپتویی از طریق درگاه پرداخت نوبیتکس می‌باشید, توجه داشته باشید که شما میتوانید از دو روش تتر(USDT-TRC20) و بیت کوین(BTC-lightcoin) استفاده کنید"
     zarinpal: "شما در حال پراخت با درگاه زرین پال می‌باشید"
