--- a/lib/locales/fa.yml
+++ b/lib/locales/fa.yml
@@ -15,5 +15,5 @@ fa:
     zarinpal: "شما در حال پراخت با درگاه زرین پال می‌باشید"
     mellat: "شما در حال پرداخت با درگاه پرداخت مستقیم بانک ملت می‌باشید"
     zibal: "شما در حال پرداخت با درگاه زیبال می‌باشید"
-    bsc-bitcoin: "شما در حال پرداخت پرداخت کریپتویی از طریق بایننس می‌باشید"
+    binance: "شما در حال پرداخت پرداخت کریپتویی از طریق بایننس می‌باشید"
     
